feat: authorization for cruds, fix: nullish, missing cases for projects.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import 'tailwindcss';
+@import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
@@ -41,7 +41,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --font-poppins: "Poppins", sans-serif
+  --font-poppins: "Poppins", sans-serif;
 }
 
 :root {
@@ -113,39 +113,45 @@
   --sidebar-ring: oklch(0.554 0.135 66.442);
 }
 
-
 @layer base {
   * {
-    @apply border-border outline-ring/50
+    @apply border-border outline-ring/50;
+  }
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+  ::-webkit-scrollbar-track {
+    @apply bg-primary/20;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply bg-yellow-800 rounded-full;
   }
   body {
-    @apply bg-background !text-foreground/90 dark:text-white font-poppins
+    @apply bg-background !text-foreground/90 dark:text-white font-poppins;
   }
 
   h1 {
-    @apply !text-foreground/90 dark:text-white text-4xl font-extrabold tracking-tight text-balance
+    @apply !text-foreground/90 dark:text-white text-2xl md:text-4xl font-extrabold tracking-tight text-balance;
   }
   h2 {
-    @apply !text-foreground/90 dark:text-white text-3xl font-bold tracking-tight
+    @apply !text-foreground/90 dark:text-white text-2xl  md:text-3xl font-bold tracking-tight;
   }
   h3 {
-    @apply !text-foreground/90 dark:text-white text-2xl font-semibold tracking-tight
+    @apply !text-foreground/90 dark:text-white  text-xl md:text-2xl font-semibold tracking-tight;
   }
   h4 {
-    @apply !text-foreground/90 dark:text-white text-xl font-semibold tracking-tight
+    @apply !text-foreground/90 dark:text-white  md:text-xl font-semibold tracking-tight;
   }
   p {
-    @apply text-[1rem] text-zinc-800 dark:text-zinc-300
+    @apply text-[1rem] text-zinc-800 dark:text-zinc-300;
   }
 }
 
 @layer utilities {
   .flex-center {
-    @apply flex items-center justify-center gap-1
+    @apply flex items-center justify-center gap-1;
   }
   .flex-between {
-    @apply flex items-center justify-between
+    @apply flex items-center justify-between;
   }
-
 }
-
