--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@
     @apply !text-foreground/90 dark:text-white text-2xl md:text-4xl font-extrabold tracking-tight text-balance;
   }
   h2 {
-    @apply !text-foreground/90 dark:text-white text-2xl  md:text-3xl font-bold tracking-tight;
+    @apply !text-foreground/90 dark:text-white text-2xl  md:text-3xl font-bold;
   }
   h3 {
     @apply !text-foreground/90 dark:text-white  text-xl md:text-2xl font-semibold tracking-tight;
